moved it test to dedicated module